Fixed margins of content so that the different divs would not overlap.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -58,6 +58,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 650px;
+  margin-top: 60px;
 }
 
 #profile-picture {
